Mustache: Exibindo informações

--- a/Modulo1/Pasta4/src/views/home.mustache
+++ b/Modulo1/Pasta4/src/views/home.mustache
@@ -5,6 +5,7 @@
 <body>
     <h1>Título da Página</h1>
     <hr>
-    Opa, tudo bem??
+    Opa, tudo bem {{user.nome}} {{user.sobrenome}}? Você tem {{user.idade}} anos.
+
 </body>
 </html>
