--- a/Modulo1/Pasta4/src/views/pages/home.mustache
+++ b/Modulo1/Pasta4/src/views/pages/home.mustache
@@ -1,10 +1,4 @@
-<html>
-<head>
-    <title>Página Home</title>
-</head>
-<body>
-    <h1>Título da Página</h1>
-    <hr>
+{{>partials/header}}
 
     
     Opa, tudo bem {{user.nome}} {{user.sobrenome}}? Você tem {{user.idade}} anos.
@@ -37,5 +31,4 @@
 
     </ul>
 
-</body>
-</html>
+{{>partials/footer}}
