Recebendo dados via POST

--- a/Modulo1/Pasta4/src/views/pages/idade.mustache
+++ b/Modulo1/Pasta4/src/views/pages/idade.mustache
@@ -1,6 +1,6 @@
 {{>partials/header}}
     <h3>Que Ano Você Nasceu?</h3>
-<form method="GET">
+<form method="POST" action="/idade-resultado"> 
     <input type="number" name="ano" placeholder="Ano De Nascimento" autocomplete="off" /><br/>
     <input type="submit">
 <form>
